--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-	background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+	background: linear-gradient(90deg, white 0%, white 100%);
 	height: 80px;
 	display: flex;
 	justify-content: center;
@@ -19,7 +19,7 @@
 }
 
 .navbar-logo {
-	color: #fff;
+	color: #242424;
 	justify-self: start;
 	margin-left: 20px;
 	cursor: pointer;
@@ -27,11 +27,6 @@
 	font-size: 2rem;
 	display: flex;
 	align-items: center;
-}
-
-.fa-typo3 {
-	margin-left: 0.5rem;
-	font-size: 1.8rem;
 }
 
 .nav-menu {
@@ -50,7 +45,7 @@
 }
 
 .nav-links {
-	color: #fff;
+	color: #242424;
 	display: flex;
 	align-items: center;
 	text-decoration: none;
@@ -59,16 +54,17 @@
 }
 
 .nav-links:hover {
-	border-bottom: 4px solid #fff;
+	border-bottom: 4px solid #242424;
 	transition: all 0.2s ease-out;
 }
 
 .fa-bars {
-	color: #fff;
+	color: #242424;
 }
 
 .nav-links-mobile {
 	display: none;
+	color: #242424;
 }
 
 .menu-icon {
@@ -93,7 +89,7 @@
 	}
 
 	.nav-menu.active {
-		background: #242222;
+		background: #fff;
 		left: 0;
 		opacity: 1;
 		transition: all 0.5s ease;
@@ -131,7 +127,7 @@
 	}
 
 	.fa-times {
-		color: #fff;
+		color: #242424;
 		font-size: 2rem;
 	}
 
@@ -144,15 +140,15 @@
 		text-decoration: none;
 		font-size: 1.5rem;
 		background-color: transparent;
-		color: #fff;
+		color: #242424;
 		padding: 14px 20px;
 		border: 1px solid #fff;
 		transition: all 0.3s ease-out;
 	}
 
 	.nav-links-mobile:hover {
-		background: #fff;
-		color: #242424;
+		background: #242424;
+		color: #fff;
 		transition: 250ms;
 	}
 }
