--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,6 +5,8 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	border: 50px;
+	border-color: #242424;
 }
 
 .footer-subscription {
@@ -16,7 +18,7 @@
 
 	margin-bottom: 24px;
 	padding: 24px;
-	color: #fff;
+	color: #242424;
 }
 
 .footer-subscription > p {
@@ -41,7 +43,7 @@
 	border: none;
 	font-size: 18px;
 	margin-bottom: 16px;
-	border: 1px solid #fff;
+	border: 1px solid #242424;
 }
 
 .footer-links {
@@ -70,7 +72,7 @@
 }
 
 .footer-link-items > h2 {
-	color: #fff;
+	color: #242424;
 }
 
 .footer-link-items a {
